syntax = "proto3";

option csharp_namespace = "Portfolio";

package storage;

service Storage {
  rpc StoreImage (stream ImageRequest) returns (ImageResponse);
}
 
message ImageRequest {
  string fileName = 1;
  bytes file = 2;
}

message ImageResponse {
  GrpcImageModel image = 1;
}

message GrpcImageModel {
  int32 id = 1;
  string fileName = 2;
  string imageUrl = 3;
}

